k8s/infrastructure/base/network/gateway/route-grafana.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: monitoring
  labels:
    gateway-access: internal
spec:
  parentRefs:
    - name: internal
      namespace: gateway
  hostnames:
    - 'grafana.kube.pc-tips.se'
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            set:
              - name: X-Forwarded-Proto
                value: https
              - name: X-Forwarded-Host
                value: grafana.kube.pc-tips.se
      backendRefs:
        - name: grafana
          port: 3000
